--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --clr-a: #ddd;
+  --clr-b: #004a5a;
+  --clr-c: #252e64;
+  --clr-d: rgb(178, 181, 216);
+  --clr-e: #ff00f2;
+  --border-radius: 0.25rem;
+  --input-padding: 0.25rem;
+  --form-el-font-size: 1rem;
+  --form-el-padding: 0.25em;
+
+  --navbar-thickness: 4rem;
+  --icon-height: 3rem;
+  --icon-font-size: 50%;
+  --font-family-a: Comfortaa, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: var(--font-family-a);
+  background: var(--clr-b);
+  color: var(--clr-a);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+img {
+  object-fit: cover;
+}
+
+input,
+textarea {
+  resize: none;
+  font-size: inherit;
+  background: var(--clr-d);
+  color: var(--clr-b);
+  border-radius: var(--border-radius);
+  padding: var(--form-el-padding);
+  border: none;
+  font-family: inherit;
+}
+
+input {
+  text-align: center;
+}
+
+input:focus,
+textarea:focus {
+  background: var(--clr-a);
+}
+
+input:invalid {
+  outline-color: red;
+}
+
+input:valid,
+textarea {
+  outline-color: rgb(26, 231, 26);
+}
+
+input:placeholder-shown,
+textarea:placeholder-shown {
+  outline-color: red;
+}
+
+label {
+  font-size: var(--form-el-font-size);
+  text-align: center;
+}
+
+button {
+  border: none;
+  font-size: var(--form-el-font-size);
+  border-radius: var(--border-radius);
+  background-color: var(--clr-c);
+  color: var(--clr-a);
+  font-weight: bold;
+}
+
+.visually-hidden {
+  border: none;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+
